--- a/index.html
+++ b/index.html
@@ -1,1 +1,112 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./Assets/Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Assets/Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Assets/Favicon/favicon-16x16.png">
+    <link rel="manifest" href="./Assets/Favicon/site.webmanifest">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tyler Gurth</title>
+  </head>
+  <body>
+    <div id="upperLayer">
+      <header>
+        <div id="pageTop">
+          <div id="nameCard">
+            <img src="./Assets/tyson_nazare_glassless.png"/>
+            <p id="name">Tyler Gurth</p>
+            <p>Brown Univeristy, co 2025</p>
+          </div>
+          <div id="aboutMe">
+            <h1>About Me</h1>
+            <blockquote>
+              19 yrs old, he/him.
+            </blockquote>
+            <blockquote>
+              Hi! My name is Tyler Gurth, and I am currently double majoring
+              in Computer Science and History of Art and Architecture at 
+              Brown University. 
+            </blockquote>
+            <blockquote>
+              I am versed in Python, Java, HTML, CSS, JavaScript,
+              and Pyret. At Brown, I'm in the graphics and AI track.
+            </blockquote>
+            <blockquote>
+              My interests lie in game development, software engineering, UI/UX, and
+              my research interests lie in art through artificial intelligence, and
+              art identification through AI. 
+            </blockquote>
+            <blockquote>
+              Feel free to reach out on any of my socials at any time, I am
+              always up to connect!
+            </blockquote>
+          </div>
+        </div>
+        <div id="socials">
+          <div class="mediaProfile">
+            <a href="https://www.facebook.com/tyler.gurth" target="_blank"><img class="mediaPic" src="./Assets/Facebook.png"/></a>
+            <a href="https://www.facebook.com/tyler.gurth" target="_blank">FaceBook</a>
+          </div>
+          <div class="mediaProfile">
+            <a href="https://www.instagram.com/tylergurth/?hl=en" target="_blank"><img class="mediaPic" src="./Assets/Instagram.png"/></a>
+            <a href="https://www.instagram.com/tylergurth/?hl=en" target="_blank">Instagram</a>
+          </div>
+          <div class="mediaProfile">
+            <a href="https://www.linkedin.com/in/tyler-gurth-87249b225/" target="_blank"><img class="mediaPic" src="./Assets/LinkedIn.png"/></a>
+            <a href="https://www.linkedin.com/in/tyler-gurth-87249b225/" target="_blank">LinkedIn</a>
+          </div>
+          <div class="mediaProfile">
+            <a href="https://github.com/tgurth" target="_blank"><img class="mediaPic" src="./Assets/Github.png"/></a>
+            <a href="https://github.com/tgurth" target="_blank">Github</a>
+          </div>
+        </div>
+      </header>
+      <div id="infoSection">
+        <div class="infoBlock">
+          <h2>The Quiet Green</h2>
+          <div class="projectBox">
+            <img class="projectPic" src="./Assets/FullGreen.png" />
+            <blockquote>
+              The Quiet Green is a bit-style rpg game surrounding Brown University's 
+              front quad. The game, written entirely in HTML, JS, and CSS, works to provide
+              a small educational tour for players (ideally, new students), as they tour around
+              the green as a Brown Band member. Talking to different NPCs starts a dialogue 
+              quest line, used as a means to educate players.
+            </blockquote>
+          </div>
+        </div>
+        <div class="infoBlock">
+          <h2>The Virtual Rosetta</h2>
+          <div class="projectBox">
+            <img class="projectPic" src="./Assets/Rosetta.png" />
+            <blockquote>
+              The Virtual Rosetta is a research project I'm working on this summer. It
+              involves a lot of data management and hierarchical clustering. We are trying
+              to use different data visualization techniques to learn about Vietnamese society
+              in the early 20th century.
+            </blockquote>
+          </div>
+        </div>
+        <div class="infoBlock">
+          <h2>Escape Room Panel</h2>
+          <div class="projectBox">
+            <img class="projectPic" src="./Assets/GameRoom.png" />
+            <blockquote>
+              I made a custom Escape Room panel for my current employer, and I intend on
+              making custom panels for other companies too. It involved a lot of unique
+              features tailored to my employer.
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>© 2022 Tyler Gurth. All rights reserved. 
+          Original Javascript, HTML, CSS, homemade.
+        </p>
+      </footer>
+    </div>
+    <script src="./main.js"></script>
+  </body>
+</html>
