--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <div id="pageTop">
           <div id="nameCard">
-            <img src="./Assets/tyson_nazare_glassless.png"/>
+            <img src="./Assets/tyson_nazare_glassless.png"/ id="tyson">
             <p id="name">Tyler Gurth</p>
             <p>Brown Univeristy, co 2025</p>
           </div>
