--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </blockquote>
             <blockquote>
               Feel free to reach out on any of my socials at any time, I am
-              always up to connect!
+              always up to connect! <a href="mailto:tgurth21@gmail.com">Or, email me!</a>
             </blockquote>
           </div>
         </div>
