--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <div id="pageTop">
           <div id="nameCard">
-            <img src="./Assets/tyson_nazare_glassless.png"/ id="tyson">
+            <img src="./Assets/newport.png" id="tyson">
             <p id="name">Tyler Gurth</p>
             <p>Brown Univeristy, co 2025</p>
           </div>
@@ -31,7 +31,7 @@
             </blockquote>
             <blockquote>
               I am versed in Python, Java, HTML, CSS, JavaScript,
-              and Pyret. At Brown, I'm in the graphics and AI track.
+              and Typescript. At Brown, I'm in the graphics and AI track.
             </blockquote>
             <blockquote>
               My interests lie in game development, software engineering, UI/UX, and
@@ -42,50 +42,25 @@
               Feel free to reach out on any of my socials at any time, I am
               always up to connect! <a href="mailto:tgurth21@gmail.com">Or, email me!</a>
             </blockquote>
-          </div>
-        </div>
-        <div id="socials">
-          <div class="mediaProfile">
-            <a href="https://www.facebook.com/tyler.gurth" target="_blank"><img class="mediaPic" src="./Assets/Facebook.png"/></a>
-            <a href="https://www.facebook.com/tyler.gurth" target="_blank">FaceBook</a>
-          </div>
-          <div class="mediaProfile">
-            <a href="https://www.instagram.com/tylergurth/?hl=en" target="_blank"><img class="mediaPic" src="./Assets/Instagram.png"/></a>
-            <a href="https://www.instagram.com/tylergurth/?hl=en" target="_blank">Instagram</a>
-          </div>
-          <div class="mediaProfile">
-            <a href="https://www.linkedin.com/in/tyler-gurth-87249b225/" target="_blank"><img class="mediaPic" src="./Assets/LinkedIn.png"/></a>
-            <a href="https://www.linkedin.com/in/tyler-gurth-87249b225/" target="_blank">LinkedIn</a>
-          </div>
-          <div class="mediaProfile">
-            <a href="https://github.com/tgurth" target="_blank"><img class="mediaPic" src="./Assets/Github.png"/></a>
-            <a href="https://github.com/tgurth" target="_blank">Github</a>
-          </div>
-        </div>
-      </header>
-      <div id="infoSection">
-        <div class="infoBlock">
-          <h2>The Quiet Green</h2>
-          <div class="projectBox">
-            <img class="projectPic" src="./Assets/FullGreen.png" />
             <blockquote>
-              The Quiet Green is a bit-style rpg game surrounding Brown University's 
-              front quad. The game, written entirely in HTML, JS, and CSS, works to provide
-              a small educational tour for players (ideally, new students), as they tour around
-              the green as a Brown Band member. Talking to different NPCs starts a dialogue 
-              quest line, used as a means to educate players.
+              Find me on my socials!
+              <a href="https://www.linkedin.com/in/tyler-gurth-87249b225/" target="_blank">LinkedIn</a>           
+              <a href="https://github.com/tgurth" target="_blank">Github</a>
+
             </blockquote>
           </div>
         </div>
+      </header>
+      <div class="infoSection">
+        <h1>Projects</h1>
         <div class="infoBlock">
           <h2>The Virtual Rosetta</h2>
           <div class="projectBox">
             <img class="projectPic" src="./Assets/Rosetta.png" />
             <blockquote>
-              The Virtual Rosetta is a research project I'm working on this summer. It
-              involves a lot of data management and hierarchical clustering. We are trying
-              to use different data visualization techniques to learn about Vietnamese society
-              in the early 20th century.
+              The Virtual Rosetta was a project I worked on in the summer of 2022. It involved using scientific
+              Python libraries like Sci-Kit Learn, SciPy, and Pandas to create visualization methods of a corpus of 4000 
+              woodblock prints from Vietnam. Read more about it here: <a href="https://drive.google.com/file/d/1LMgf56KCXGp90ApKy1m1LnQyOwqtleDC/view?usp=sharing">Research Poster</a>
             </blockquote>
           </div>
         </div>
@@ -94,11 +69,32 @@
           <div class="projectBox">
             <img class="projectPic" src="./Assets/GameRoom.png" />
             <blockquote>
-              I made a custom Escape Room panel for my current employer, and I intend on
-              making custom panels for other companies too. It involved a lot of unique
-              features tailored to my employer.
+              I made a custom Escape Room web app panel for my current employer. It used Firebase hosting, storage, and database to manage
+              and deploy the site. The web app included functions for room management, a clue storage system, and a leaderboard system. It brought to the
+              table new previously unreported statistics to be used for advertising and room creation.
             </blockquote>
           </div>
+        </div>
+        <div class="infoBlock">
+          <h2>ProjectKorra</h2>
+          <div class="projectBox">
+            <img class="projectPic" src="./Assets/zuko.png" />
+            <blockquote>
+              I contribute to the open source popular Minecraft Plugin "ProjectKorra". This Java project is a ton of fun, and I've worked a lot
+              to engage the community, and enhance customizability of the plugin through greater configuration and toggleability. I also worked a lot on creating
+              new custom content in the form of "abilities", think, magic spells that are animated through Minecraft's particle system and parametric equations.
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <div class="infoSection">
+        <h1>Personal 3D Project Gallery</h1>
+        <div id="gallery">
+          <img src="Assets/CinematicStill.png" width="100%" class="galleryPic">
+          <img src="Assets/CompleteValley.png" width="100%" class="galleryPic">
+          <img src="Assets/outhouse.png" width="100%" class="galleryPic">
+          <img src="Assets/oogway.png" width="100%" class="galleryPic">
+          <img src="Assets/deer.png" width="100%" class="galleryPic">
         </div>
       </div>
       <footer>
