--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <blockquote>
               Hi! My name is Tyler Gurth, and I am currently double majoring
               in Computer Science and History of Art and Architecture at 
-              Brown University. 
+              Brown University. I also TA introductory computer science classes here.
             </blockquote>
             <blockquote>
               I am versed in Python, Java, HTML, CSS, JavaScript,
