added restaurant finding page, new picture

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <title>Tyler Gurth</title>
   </head>
   <body>
+    <div id="nav-bar">
+      <img src="Assets/TGLogo.png" id="tyson-nazare">
+      <div id="inner-nav">
+        <div id="about-anchor" class="nav-element">About</div>
+        <div id="project-anchor" class="nav-element">Projects</div>
+        <div id="experience-anchor" class="nav-element">Experience</div>
+        <div id="gallery-anchor" class="nav-element">Gallery</div>
+        <div class="nav-element"><a href="restaurants.html">Restaurant Picker</a></div>
+      </div>
+      <p style="color: whitesmoke">Tyler Gurth</p>
+    </div>
     <div id="upperLayer">
       <header>
         <div id="pageTop">
@@ -51,7 +62,7 @@
           </div>
         </div>
       </header>
-      <div class="infoSection">
+      <div class="infoSection" id="projects">
         <h1>Projects</h1>
         <div class="infoBlock">
           <h2>The Virtual Rosetta</h2>
@@ -87,7 +98,10 @@
           </div>
         </div>
       </div>
-      <div class="infoSection">
+      <div class="infoSection" id="experience">
+        
+      </div>
+      <div class="infoSection" id="gall">
         <h1>Personal 3D Project Gallery</h1>
         <div id="gallery">
           <img src="Assets/CinematicStill.png" width="100%" class="galleryPic">
@@ -95,6 +109,7 @@
           <img src="Assets/outhouse.png" width="100%" class="galleryPic">
           <img src="Assets/oogway.png" width="100%" class="galleryPic">
           <img src="Assets/deer.png" width="100%" class="galleryPic">
+          <img src="Assets/Sayles.png" width="100%" class="galleryPic">
         </div>
       </div>
       <footer>
