--- a/index.html
+++ b/index.html
@@ -99,7 +99,22 @@
         </div>
       </div>
       <div class="infoSection" id="experience">
-        
+        <h1>Experience</h1>
+        <div class="experience-box">
+          <h3>Head Teaching Assistant, Brown University Computer Science</h3>
+          <blockquote>
+            I serve as a Head Teaching Assistant for Brown CS' class on Discrete Structures and Probability. 
+            Within the proof based class, I work on grading, communicating with students, and managing a staff of 26 TAs.
+          </blockquote>
+        </div>
+        <div class="experience-box">
+          <h3>Technical Director, Escape Garden State NJ</h3>
+          <blockquote>
+            I developed and designed a new escape room web app with Vite.js and Google Firebase database. I also
+            acted as a tech consultant for the staff, and made helpful util systems, like a javascript Discord bot, and 
+            math utils for calculating scores and times.
+          </blockquote>
+        </div>
       </div>
       <div class="infoSection" id="gall">
         <h1>Personal 3D Project Gallery</h1>
