--- a/restaurants.html
+++ b/restaurants.html
@@ -31,7 +31,7 @@
       </div>
       <footer>
         <p>© 2022 Tyler Gurth. All rights reserved. 
-          Original Javascript, HTML, CSS, homemade.
+          Javascript, HTML, and a dash of CSS.
         </p>
       </footer>
     </div>
