--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
   </head>
   <body>
     <div id="nav-bar">
-      <img src="Assets/TGLogo.png" id="tyson-nazare">
-      <div id="inner-nav">
         <div id="about-anchor" class="nav-element">About</div>
         <div id="project-anchor" class="nav-element">Projects</div>
         <div id="experience-anchor" class="nav-element">Experience</div>
         <div id="gallery-anchor" class="nav-element">Gallery</div>
         <div class="nav-element"><a href="restaurants.html">Restaurant Picker</a></div>
-      </div>
-      <p style="color: whitesmoke">Tyler Gurth</p>
     </div>
     <div id="upperLayer">
       <header>
@@ -38,7 +34,7 @@
             <blockquote>
               Hi! My name is Tyler Gurth, and I am currently double majoring
               in Computer Science and History of Art and Architecture at 
-              Brown University. I also TA introductory computer science classes here.
+              Brown University. I also Head TA introductory computer science classes here.
             </blockquote>
             <blockquote>
               I am versed in Python, Java, HTML, CSS, JavaScript,
