added scrappy to website

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <title>Tyler Gurth</title>
   </head>
   <body>
-    <div id="nav-bar">
+    <div id="nav-bar-wrapper">
+      <div id="nav-bar">
         <div id="about-anchor" class="nav-element">About</div>
         <div id="project-anchor" class="nav-element">Projects</div>
         <div id="experience-anchor" class="nav-element">Experience</div>
         <div id="gallery-anchor" class="nav-element">Gallery</div>
         <div class="nav-element"><a href="restaurants.html">Restaurant Picker</a></div>
+      </div>
     </div>
     <div id="upperLayer">
       <header>
@@ -79,6 +81,18 @@
               I made a custom Escape Room web app panel for my current employer. It used Firebase hosting, storage, and database to manage
               and deploy the site. The web app included functions for room management, a clue storage system, and a leaderboard system. It brought to the
               table new previously unreported statistics to be used for advertising and room creation.
+            </blockquote>
+          </div>
+        </div>
+        <div class="infoBlock">
+          <h2>Scrappy</h2>
+          <div class="projectBox">
+            <img class="projectPic" src="./Assets/scrappy.png" />
+            <blockquote>
+              Scrappy is a React project built upon a MongoDB database in which users can create photo albums each day
+              to save their memories with meaningful captions, world news, and photos. AWS was used to save the photos, as 
+              retrievable links. Moreoever, the app has a friends system and a custom sorting NLP algorithm I wrote to sort public posts
+              based on hashtags a user indicates they are interested in. 
             </blockquote>
           </div>
         </div>
